--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>se.got</groupId>
-	<artifactId>spec</artifactId>
+	<artifactId>psaimist</artifactId>
 	<packaging>jar</packaging>
 	<version>0.0.1</version>
 	<name>spec</name>
@@ -85,7 +85,6 @@
 			<artifactId>guava</artifactId>
 			<version>15.0</version>
 		</dependency>
-
 
 
 
