--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,16 @@
 	<name>spec</name>
 	<url>http://maven.apache.org</url>
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -50,6 +60,7 @@
 					<!-- MainClass in mainfest make a executable jar -->
 					<archive>
 						<manifest>
+							<addClasspath>true</addClasspath>
 							<mainClass>se.got.Co4robotsGUI</mainClass>
 						</manifest>
 					</archive>
