starts parsing from xml files

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
 		</dependency>
 
 
-
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+			<version>4.7.1</version>
+		</dependency>
 	</dependencies>
 </project>
