--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,33 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--  mvn package appbundle:bundle -->
+			<plugin>
+				<groupId>sh.tak.appbundler</groupId>
+				<artifactId>appbundle-maven-plugin</artifactId>
+				<version>1.2.0</version>
+				<configuration>
+					<mainClass>se.got.Co4robotsGUI</mainClass>
+					<bundleName>PsAlMISt</bundleName>
+					<iconFile>PsAlMISt.icns</iconFile>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>bundle</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
+		<dependency>
+			<groupId>com.yuvimasory</groupId>
+			<artifactId>orange-extensions</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
