Adds a missing dependency to the CTL class

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,15 @@
 				<updatePolicy>always</updatePolicy>
 			</snapshots>
 		</repository>
+		
+		<repository>
+			<id>CTL-mvn-repo</id>
+			<url>https://raw.github.com/claudiomenghi/CTL/mvn-repo/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
 		<repository>
 			<id>MDSDcourse</id>
 			<url>https://raw.github.com/MDSDcourse/MDSDcourse/mvn-repo/</url>
